Dynamic default years in selector dialog, color changes, other minod tweaks